[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=1]
[ext_resource path="res://src/UI/Menus/Register/RegisterForm.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Elements/LineEditValidate.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Menus/Login/PasswordField.gd" type="Script" id=4]
[ext_resource path="res://assets/theme/stylebox/button_focused_margin.tres" type="StyleBox" id=5]
[ext_resource path="res://src/UI/Menus/Login/EmailField.gd" type="Script" id=6]
[ext_resource path="res://src/UI/Elements/StatusPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/Menus/Login/PasswordRepeatField.gd" type="Script" id=8]

[node name="RegisterForm" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -292.0
margin_top = -150.0
margin_right = 292.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 272 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -17.0
margin_bottom = 72.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Email"]
margin_top = 12.0
margin_right = 120.0
margin_bottom = 43.0
rect_min_size = Vector2( 120, 0 )
text = "Email"

[node name="LineEditValidate" parent="Email" instance=ExtResource( 3 )]
margin_left = 136.0
margin_right = 551.0
script = ExtResource( 6 )

[node name="Password" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 16.0
margin_top = 88.0
margin_right = -17.0
margin_bottom = 136.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Password"]
margin_top = 8.0
margin_right = 120.0
margin_bottom = 39.0
rect_min_size = Vector2( 120, 0 )
text = "Password"

[node name="LineEditValidate" parent="Password" instance=ExtResource( 3 )]
margin_left = 136.0
margin_right = 551.0
margin_bottom = 48.0
secret = true
script = ExtResource( 4 )

[node name="PasswordRepeat" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 16.0
margin_top = 156.0
margin_right = -17.0
margin_bottom = 204.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PasswordRepeat"]
margin_top = 8.0
margin_right = 120.0
margin_bottom = 39.0
rect_min_size = Vector2( 120, 0 )
text = "Repeat"

[node name="LineEditValidate" parent="PasswordRepeat" instance=ExtResource( 3 )]
margin_left = 136.0
margin_right = 551.0
margin_bottom = 48.0
secret = true
script = ExtResource( 8 )
password_field_path = NodePath("../../Password/LineEditValidate")

[node name="RememberEmail" type="CheckBox" parent="."]
anchor_right = 1.0
margin_left = 152.0
margin_top = 218.0
margin_right = -228.0
margin_bottom = 250.0
custom_styles/focus = ExtResource( 5 )
shortcut_in_tooltip = false
text = "Remember me"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -80.0
margin_right = -17.0
margin_bottom = -16.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterButton" type="Button" parent="HBoxContainer"]
margin_right = 267.0
margin_bottom = 64.0
rect_min_size = Vector2( 120, 60 )
size_flags_horizontal = 3
text = "Register"

[node name="CancelButton" type="Button" parent="HBoxContainer"]
margin_left = 283.0
margin_right = 551.0
margin_bottom = 64.0
rect_min_size = Vector2( 120, 60 )
size_flags_horizontal = 3
text = "Cancel"

[node name="StatusPanel" parent="." instance=ExtResource( 7 )]
[connection signal="text_entered" from="Email/LineEditValidate" to="." method="_on_LineEditValidate_text_entered"]
[connection signal="text_entered" from="Password/LineEditValidate" to="." method="_on_LineEditValidate_text_entered"]
[connection signal="text_entered" from="PasswordRepeat/LineEditValidate" to="." method="_on_LineEditValidate_text_entered"]
[connection signal="pressed" from="HBoxContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
